# lookatme

./: pyproject.toml
lookatme/: tui.py
